# evm-benchmarks

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GUILLOTINE_GO_SDK_INTEGRATION.md  LICENSE  Makefile  README.md  README_GO.md  batch_benchmark_results.json  benchmark_internal.sh  build.zig  build.zig.zon  foundry.toml  full_matrix.json  go.mod  go.sum  package-lock.json  package.json  quick-start.sh  requirements.txt  result.md  results.md  results_erc20_approval_bench.json  results_erc20_mint_bench.json  results_erc20_transfer_bench.json  results_snailtracer.json  results_ten_thousand_hashes.json  run.sh  setup.py  show_results.py  test_benchmark.py  test_matrix.json  test_revm.rs
.github/workflows/: ci.yml
benchmarks/snailtracer/: SnailTracer.sol  snailtracer_bytecode.hex  snailtracer_runtime.hex
cmd/bench/: main.go
evms/benchmark-runner/: Makefile  benchmark-runner-simple  go.mod  go.sum  main.go  main_simple.go
fixtures/: arithmetic.json  bitwise.json  blockinfo.json  bubblesort.json  calldata.json  codecopy.json  comparison.json  context.json  contractcalls.json  contractcreation.json  controlflow.json  erc20approval.json  erc20mint.json  erc20transfer.json  externalcode.json  factorial-recursive.json  factorial.json  fibonacci-recursive.json  fibonacci.json  hashing.json  logs.json  manyhashes.json  memory.json  modulararithmetic.json  mstore.json  push.json  returndata.json  shifts.json  signedarithmetic.json  snailtracer.json  sstore.json  stack.json  storage.json  ten-thousand-hashes.json
fixtures/cache/: solidity-files-cache.json
guillotine/: build.zig  build.zig.zon
guillotine-rs/: Cargo.toml  README.md  build.rs
guillotine-rs/src/: executor.rs  lib.rs  stubs.c
guillotine/.zig-cache/o/98610c6f788113e603c6d6d569e444e3/: dependencies.zig
guillotine/src/: main.zig
internal/benchmark/: evm.go  runner.go
internal/tui/: model.go  styles.go
src/: benchmarks.rs  cli.py  cli.rs  cli_display.py  compiler.rs  display.rs  ethereumjs_runner.js  ethrex_executor.rs  evm.rs  evm_benchmarks.py  fixture.zig  geth_runner.go  guillotine_bun_runner.ts  guillotine_executor.zig  guillotine_go_runner.go  guillotine_python_runner.py  guillotine_runner.rs  guillotine_runner.zig  guillotine_runner_c.zig  main.rs  main.zig  py_evm_runner.py  pyrevm_runner.py  revm_executor.rs  runner.rs
src/evms/: ethrex.rs  guillotine.rs  mod.rs  revm.rs
