[package]
name = "evm-bench"
version = "0.1.0"
edition = "2021"
authors = ["EVM Bench Contributors"]
description = "EVM benchmarking tool for comparing different implementations"
default-run = "evm-bench"

[[bin]]
name = "evm-bench"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "suggestions", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
indicatif = "0.17"
which = "6.0"
tempfile = "3.10"
hex = "0.4"
walkdir = "2.5"
comfy-table = "7.1"
sha3 = "0.10"
statistical = "1.0"
std-dev = "0.1"
foundry-compilers = "0.19"

# Revm - built from source as a submodule
revm = { path = "evms/revm/crates/revm", default-features = false, features = ["std", "serde"] }
revm-primitives = { path = "evms/revm/crates/primitives", default-features = false, features = ["std"] }
revm-interpreter = { path = "evms/revm/crates/interpreter", default-features = false, features = ["std"] }
alloy-primitives = "1.3.1"

# Guillotine - Zig EVM with Rust SDK
guillotine-rs = { path = "evms/guillotine/sdks/rust" }

# For timing benchmarks
criterion = { version = "0.5", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
