[package]
name = "evm-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "revm_runner"
path = "src/main.rs"

[[bin]]
name = "guillotine_runner"
path = "src/guillotine_runner.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
once_cell = "1.21"
keccak-hash = "0.11"

[dependencies.revm]
path = "revm/crates/revm"
features = ["std"]

[dependencies.ethrex-levm]
path = "ethrex/crates/vm/levm"
default-features = false

[dependencies.ethrex-common]
path = "ethrex/crates/common"

[dependencies.ethrex-blockchain]
path = "ethrex/crates/blockchain"

[dependencies.ethrex-storage]
path = "ethrex/crates/storage"

[dependencies.ethrex-vm]
path = "ethrex/crates/vm"

[dependencies.guillotine-rs]
path = "guillotine-rs"